# finnote

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: daily-pipeline.yml
scripts/: analytics.py  bt1_deep_dive.py  collect_market_data.py  daily_collect.bat  generate_report.py  run_analytics.py  run_backtests.py
src/finnote/: __init__.py  __main__.py
src/finnote/agents/: base.py  roles.py  teams.py
src/finnote/collectors/: __init__.py  alt_data.py  derivatives_data.py  market_data.py  news.py  sources.py
src/finnote/config/: settings.py
src/finnote/datastore/: __init__.py  build_manifest.py  category_charts.py  extended_catalog.py  extended_collectors.py  fred_catalog.py  fred_collector.py  interactive_charts.py  timeseries_db.py
src/finnote/datastore/templates/: dashboard.html
src/finnote/meta/: __init__.py  calibration.py  feedback.py
src/finnote/products/: __init__.py  base.py  daily.py  daily_report.py  delta_detector.py  live_coverage.py  monthly.py  morning_brief.py  weekly.py
src/finnote/track_record/: __init__.py  ledger.py  scorecard.py
src/finnote/validation/: __init__.py  backtester.py  compliance.py  historical_data.py
src/finnote/visualizations/: __init__.py  bloomberg_style.py  dashboard.py
src/finnote/workflow/: __init__.py  debate.py  pipeline.py  synthesis.py
tests/: test_agents.py  test_collectors.py  test_debate_synthesis.py  test_delta_detector.py  test_live_coverage.py  test_morning_brief.py  test_pipeline.py  test_track_record.py  test_validation.py  test_visualizations.py
