[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finnote"
version = "0.1.0"
description = "Multi-agent financial intelligence — market signals, Bloomberg-style visualization, adversarial commentary"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "polars>=1.0.0",
    "plotly>=5.22.0",
    "kaleido>=0.2.1",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "feedparser>=6.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.30",
    "pytrends>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
